# capstone

./: .gitignore  CMakeLists.txt  package.xml  pipeline.py  pipeline.txt  requirements.txt  setup.py  test.py  yolov8ntrained.json
capstone/: app_display.py  brain.py  host_launch.xml  robot_launch.xml
config/: config.yaml
launch/: host_launch.xml  robot_launch.xml
src/: README.md  requirements.txt
src/app/: _icons.qrc  main.py
src/app/generated-files/css/: main.css
src/app/json-styles/: style.json
src/app/src/: backend.py
src/app/ui/: interface.py  interface.ui  new_interface.py  new_interface.ui  watchdog_updater.py
src/capstone/: defect_ML.py  package.xml  setup.cfg  setup.py  video_feed.py
src/capstone/app/: _icons.qrc  _icons_rc.py  main.py
src/capstone/app/src/: backend.py  gui_functionality.py
src/capstone/app/ui/: new_interface.py  new_interface.ui  watchdog_updater.py
src/capstone/capstone/: backend.py  brain.py  camera.py  device_controller.py  devices.py  motor.py  motor_controller.py  motor_test.py  pose_estimation_test.py  read_h5_copy.py  test.py  transformation_matrix.py  yolov8ntrained.xml
src/capstone/config/: host_launch.yaml  robot_launch.yaml
src/capstone/launch/: host.launch.py  host_launch.xml  robot.launch.py  robot_launch.xml
src/capstone/robot_interface/: package.xml
src/capstone/robot_interface/msg/: RobotSpeed.msg
src/robot_interface/: CMakeLists.txt  package.xml
src/robot_interface/msg/: CameraSpeed.msg  Defect.msg  RobotSpeed.msg  Save.msg  Speed.msg
src/robot_ws/capstone_common/: CMakeLists.txt  package.xml
src/robot_ws/controller_interface/: package.xml  setup.cfg  setup.py
src/robot_ws/controller_interface/controller_interface/: camera.py  joy_publisher.py
src/robot_ws/gui_interface/: package.xml  setup.py
src/robot_ws/robot_actuators/: package.xml  setup.cfg  setup.py
src/robot_ws/robot_actuators/launch/: robot_launch.py
(+4 files in other folders)
